--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -17,9 +17,9 @@ section {
   border-radius: 20px;
 }
 
-/* p {
-
-} */
+article {
+  padding: 0 2rem 1rem 2rem;
+}
 
 span {
   margin-bottom: 1rem;
@@ -41,6 +41,19 @@ h5 {
   margin: 0;
 }
 
+button {
+  background: none;
+  color: inherit;
+  border: none;
+  padding: 0;
+  outline: inherit;
+}
+
 #info {
-  padding: 0 2rem 1rem 2rem;
+  display: flex;
+  justify-content: space-between;
+}
+
+#heart {
+  margin: 1rem 0 1rem 0;
 }
